[tool.poetry]
name = "plato-helper-py"
version = "2.1.1"
description = "Helper for the Plato microservice"
authors = ["Tiago Santos <tiago.santos@vizidox.com>", "Joana Teixeira <joana.teixeira@vizidox.com>", "Le Hong Hieu <hieu.le@morphotech.co.uk>", "Rita Mariquitos <rita.mariquitos@morphotech.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7.2"

requests="^2.27"
backoff="^2.2"
types-requests = "^2.28.11"

[tool.poetry.dev-dependencies]

# Static Typing
mypy="^1.1.1"
mypy-extensions="^1.0.0"
typing-extensions="^4.3"

pylint = "^2.15"
coverage = "^7.2.2"
tox = "^4.4.9"
cyclonedx-bom="^3.6"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
